--- a/.travis.yml
+++ b/.travis.yml
@@ -8,14 +8,15 @@ julia:
   - 1.1.1
 notifications:
   email: false
-#script:
+script:
+    ./hello.jl
 #    - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
 #    - julia -e 'Pkg.clone(pwd()); Pkg.build("BenchmarkTools"); Pkg.test("BenchmarkTools"; coverage=true)'
 after_success:
-    - |
-        julia -e '
-          import BenchmarkTools, Pkg
-          Pkg.add("Coverage")
-          using Coverage
-          #cd(normpath(dirname(pathof(BenchmarkTools)), ".."))
-          #Coveralls.submit(Coveralls.process_folder())
+#    - |
+#        julia -e '
+#          import BenchmarkTools, Pkg
+#          Pkg.add("Coverage")
+#          using Coverage
+#          cd(normpath(dirname(pathof(BenchmarkTools)), ".."))
+#          Coveralls.submit(Coveralls.process_folder())
